--- a/Assignments/HaruKoga_TSA_A02_Sp23.Rmd
+++ b/Assignments/HaruKoga_TSA_A02_Sp23.Rmd
@@ -102,8 +102,14 @@ sd(ts_RE_data)
 Display and interpret the time series plot for each of these variables. Try to make your plot as informative as possible by writing titles, labels, etc. For each plot add a horizontal line at the mean of each series in a different color.
 
 ```{r}
-autoplot(ts_RE_data)
 
+
+autoplot(ts_RE_data[,"Biomass"]) +
+  xlab("Time") +
+  ylab("Biomass Production") +
+  labs(color="Energy Source")
+
+abline(mean(ts_RE_data[,"Biomass"])
 ```
 
 
@@ -111,7 +117,9 @@ autoplot(ts_RE_data)
 Compute the correlation between these three series. Are they significantly correlated? Explain your answer.
 
 ```{r}
+cor(ts_RE_data[,1],ts_RE_data[,2],ts_RE_data[,3])
 
+cor(ts_RE_data)
 ```
 
 
@@ -119,7 +127,13 @@ Compute the correlation between these three series. Are they significantly corre
 Compute the autocorrelation function from lag 1 up to lag 40 for these three variables. What can you say about these plots? Do the three of them have the same behavior?
 
 ```{r}
+RE_acf=acf(ts_RE_data,lag.max=40, type="correlation", plot=TRUE)
 
+Biomass_acf=acf(ts_RE_data[,1],lag.max=40, plot=TRUE)
+
+Renewables_acf=acf(ts_RE_data[,2],lag.max=40, plot=TRUE)
+
+Hydroelectric_acf=acf(ts_RE_data[,3],lag.max=40, plot=TRUE)
 ```
 
 
@@ -127,7 +141,11 @@ Compute the autocorrelation function from lag 1 up to lag 40 for these three var
 Compute the partial autocorrelation function from lag 1 to lag 40 for these three variables. How these plots differ from the ones in Q6?
 
 ```{r}
+Biomass_pacf=pacf(ts_RE_data[,1],lag.max=40, plot=TRUE)
 
+Renewables_pacf=pacf(ts_RE_data[,2],lag.max=40, plot=TRUE)
+
+Hydroelectric_pacf=pacf(ts_RE_data[,3],lag.max=40, plot=TRUE)
 ```
 
 
