--- a/Assignments/TSA_A03_Sp23.Rmd
+++ b/Assignments/TSA_A03_Sp23.Rmd
@@ -32,8 +32,35 @@ R packages needed for this assignment:"forecast","tseries", and "Kendall". Insta
 
 ```{r}
 #Load/install required package here
+library(tseries)
+library(forecast)
+library(dplyr)
+library(lubridate)
+library(ggplot2)
+library(Kendall)
+library(tidyverse)
+```
+
+
+```{r}
+knitr::opts_chunk$set(echo = TRUE) 
+```
+
+```{r}
+getwd()
+
+RE_data_raw <- read.csv(file="/Users/harumikoga/TimeSeriesAnalysis_Sp23/Data/Table_10.1_Renewable_Energy_Production_and_Consumption_by_Source-Edit.csv",header=FALSE, skip=1)
+RE_data_raw
+
+RE_data <- RE_data_raw[c(1,4,5,6)]
+
+colnames(RE_data)=c("Month","Biomass", "Renewable", "Hydroelectric")
+head(RE_data)
 
 ```
+
+
+
 
 ##Trend Component
 
