--- a/Lessons/M3_TrendSeasonality_Jan31.Rmd
+++ b/Lessons/M3_TrendSeasonality_Jan31.Rmd
@@ -268,7 +268,7 @@ Used to detect stochastic trend.
 ```{r}
 #Null hypothesis is that data has a unit root
 it can still have a determistic trend. you dont need to differenciate 
-print("Results for ADF test/n")
+print("Results for ADF test")
 
 #Now let's try the yearly data
 print("Results for ADF test on yearly data/n")
